<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16sp"
    tools:context=".ui.MainActivity">


    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/linearLayout"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/languageIdentifier"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/languageIdentifier"
            android:textColor="@color/black"
            android:textSize="22sp"/>

        <Spinner
            android:layout_marginLeft="50dp"
            android:id="@+id/spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity=""
            tools:listitem="@android:layout/simple_dropdown_item_1line" />



    </androidx.appcompat.widget.LinearLayoutCompat>


    <TextView
        android:id="@+id/stringTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="16sp"
        android:text="@string/text_view_text"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/linearLayout" />

    <TextView
        android:padding="8sp"
        android:id="@+id/simpleText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/simpleText"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@id/stringTextView"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <TextView
        android:padding="8sp"
        android:id="@+id/simpleTextUntranslated"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/simpleTextUntranslated"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@id/simpleText"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <TextView
        android:padding="16sp"
        android:id="@+id/stringTextViewButtons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/buttonList"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/simpleTextUntranslated" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/stringTextViewButtons"
        android:orientation="horizontal">
        <Button
            android:layout_margin="8dp"
            android:id="@+id/buttonToAnotherFragment1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/go_to_fragment"/>

        <Button
            android:layout_margin="8dp"
            android:id="@+id/button2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/useless_button"/>


    </LinearLayout>







    <TextView
        android:id="@+id/untranslatedTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/untranslated"
        android:textColor="#FF777777"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>